--- a/views/div_form.erb
+++ b/views/div_form.erb
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -26,21 +28,23 @@
         </td>
       </tr>
     </table>
+    <h1>New division</h1>
 
-    <h1>Division</h1>
+    <form action="/wizard_divide">
+      <label for="form_first_number">
+            Divide this:
+      </label>
+      <input id="form_first_number" name="first_num" text="text">
 
-    <dl>
-      <dt>First number</dt>
-      <dd><%= @first_num %></dd>
+      <label for="form_second_number">
+            by this:
+      </label>
+      <input id="form_second_number" name="second_num" text="text">
 
-      <dt>Second number</dt>
-      <dd><%= @second_num %></dd>
-
-      <dt>Result</dt>
-      <dd><%= @result %></dd>
-    </dl>
-
-    <a href="/divide">Do another division</a>
+      <button>
+        Divide!
+      </button>
+    </form>
 
   </body>
 </html>
