--- a/views/mult_result.erb
+++ b/views/mult_result.erb
@@ -1,14 +1,46 @@
-<h1>Multiplication</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Sinatra Omnicalc 2</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+  </head>
 
-<dl>
-  <dt>First number</dt>
-  <dd><%= @first_number %></dd>
+  <body>
+    <table style="width: 100%" border="1">
+      <tr>
+        <td>
+          <a href="/add">Add</a>
+        </td>
 
-  <dt>Second number</dt>
-  <dd><%= @second_num %></dd>
+        <td>
+          <a href="/subtract">Subtract</a>
+        </td>
 
-  <dt>Result</dt>
-  <dd><%= @result %></dd>
-</dl>
+        <td>
+          <a href="/multiply">Multiply</a>
+        </td>
 
-<a href="/multiply">Do another multiplication</a>
+        <td>
+          <a href="/divide">Divide</a>
+        </td>
+      </tr>
+    </table>
+
+    <h1>Multiplication</h1>
+
+    <dl>
+      <dt>First number</dt>
+      <dd><%= @first_num %></dd>
+
+      <dt>Second number</dt>
+      <dd><%= @second_num %></dd>
+
+      <dt>Result</dt>
+      <dd><%= @result %></dd>
+    </dl>
+
+    <a href="/multiply">Do another multiplication</a>
+
+  </body>
+</html>
